correction du type composer

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "siwayll/phpcs-norme-dpsi",
-  "type": "PHPCS standard",
+  "type": "library",
   "description": "Standard DPSI for PHPCS",
   "homepage": "https://github.com/Siwayll/phpcs-norme-dpsi",
   "keywords": ["PHPCS"],
